# rk

./: CMakeLists.txt  Program.cpp
.github/workflows/: ci-cd.yml  ci.yml
include/: DocumentFactory.hpp  HtmlDocument.hpp  IDocument.hpp  OdtDocument.hpp  PdfDocument.hpp
src/: DocumentFactory.cpp  HtmlDocument.cpp  OdtDocument.cpp  PdfDocument.cpp
test/: test_documents.cpp
